# optora

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml  version-preview.yml
docs/: index.md  release.md
docs/api/: core.md  deterministic-solvers.md  index.md
optora/: __init__.py  _version.py
optora/core/: __init__.py  divergence_base.py  dro_base.py  objective.py  problem.py  result.py
optora/divergences/: __init__.py  f_divergence.py  kl.py
optora/solvers/: __init__.py  base.py  line_search.py
optora/solvers/deterministic/: __init__.py  bfgs.py  gradient_descent.py
tests/: test_release_version.py
tests/core/: test_divergence_base.py  test_dro_base.py  test_objective.py  test_problem.py
tests/divergences/: test_f_divergence.py  test_kl.py
tests/solvers/: test_deterministic_components.py  test_line_search.py
tools/: release_version.py
