[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optora"
version = "0.0.1"
description = "A research-oriented optimization library for deterministic and stochastic methods."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Optora contributors" }
]
keywords = [
  "optimization",
  "stochastic optimization",
  "deterministic optimization",
  "machine learning",
  "scientific computing"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch>=2.2"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "twine>=5"
]
docs = [
  "zensical>=0.0.11",
  "mkdocstrings-python>=1.10"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["optora*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["optora"]
ignore_missing_imports = true
strict = true
